--- a/mario.yml
+++ b/mario.yml
@@ -5,8 +5,16 @@
     gather_facts: no
     connection: local
     become: true
+    become_method: sudo
 
     tasks:
+    
+    - name: Install pip
+      apt: name=python-pip state=present
+      
+    - name: install docker-py
+      pip: name=docker-py
+      
     - name: Install Docker using apt
       apt:
         name: docker.io
