--- a/mario.yml
+++ b/mario.yml
@@ -29,6 +29,7 @@
     - name: Running the container
       docker_container:
         image: mario:latest
+        publish_all_ports: yes
         state: running
             
     - name: Check if container is running
